Move to logical relations

--- a/thesis.bib
+++ b/thesis.bib
@@ -43,6 +43,11 @@
     author = {Chantal Keller and Thorsten Altenkirch},
     title = {Normalization by hereditary substitutions},
     year = {2010},
+} 
+@thesis{keuchel11,
+    author = {Steven Keuchel},
+    title = {Generic Programming with binders and scope},
+    year = {2011},
 }
 @INPROCEEDINGS{coutts07,
     author = {Duncan Coutts and Roman Leshchinskiy and Don Stewart},
