--- a/thesis.bib
+++ b/thesis.bib
@@ -10,12 +10,12 @@
  address = {Amsterdam},
  }
 @INPROCEEDINGS{meyer85,
-    author = {Albert R. Meyer and Mitchell Wand},
-    title = {Continuation Semantics in Typed Lambda-Calculi},
-    booktitle = {Logics of Programs},
-    year = {1985},
-    pages = {219--224},
-    publisher = {Springer-Verlag}
+  author = {Albert R. Meyer and Mitchell Wand},
+  title = {Continuation Semantics in Typed Lambda-Calculi},
+  booktitle = {Logics of Programs},
+  year = {1985},
+  pages = {219--224},
+  publisher = {Springer-Verlag}
 }
 @inproceedings{meijer95,
  author = {Meijer, Erik and Hutton, Graham},
@@ -32,6 +32,11 @@
  acmid = {224225},
  publisher = {ACM},
  address = {New York, NY, USA},
+}
+@MISC{erwig07,
+    author = {Martin Erwig and Deling Ren},
+    title = { An update calculus for expressing type-safe program updates},
+    year = {2007}
 }
 @TECHREPORT{heeren02,
     author = {Bastiaan Heeren  and Jurriaan Hage and Doaitse Swierstra},
@@ -64,3 +69,171 @@
     pages = {50--64},
     publisher = {Springer-Verlag}
 }
+@book{mitchell96,
+  author    = {John C. Mitchell},
+  title     = {Foundations for programming languages},
+  publisher = {MIT Press},
+  series    = {Foundation of computing series},
+  year      = {1996},
+  isbn      = {978-0-262-13321-0},
+  pages     = {I-XIX, 1-846}
+}
+@inproceedings{ahmed11,
+  author    = {Amal Ahmed and
+               Matthias Blume},
+  title     = {An equivalence-preserving CPS translation via multi-language
+               semantics},
+  booktitle = {ICFP},
+  year      = {2011},
+  pages     = {431-444}
+}
+@MISC{schurmann08,
+    author = {Carsten Schürmann and Jeffrey Sarnat},
+    title = {Structural Logical Relations ∗},
+    year = {2008}
+}
+@thesis{hinze00,
+  author = {Ralph Hinze},
+  title = {Generic Programs and Proofs},
+  year = 2000
+}
+@inproceedings{reynolds83,
+    author = {Reynolds, John C.},
+    booktitle = {IFIP Congress},
+    keywords = {classic-papers-fall09, rg-2005, rg-2009},
+    pages = {513--523},
+    posted-at = {2009-08-18 07:12:47},
+    priority = {2},
+    title = {Types, Abstraction and Parametric Polymorphism},
+    url = {ftp://ftp.cs.cmu.edu/user/jcr/typesabpara.pdf},
+    year = {1983}
+}
+@inproceedings{cunha06,
+ author = {Cunha, Alcino and Oliveira, Jos{\'e} Nuno and Visser, Joost},
+ title = {Type-safe two-level data transformation},
+ booktitle = {Proceedings of the 14th international conference on Formal Methods},
+ series = {FM'06},
+ year = {2006},
+ isbn = {3-540-37215-6, 978-3-540-37215-8},
+ location = {Hamilton, Canada},
+ pages = {284--299},
+ numpages = {16},
+ url = {http://dx.doi.org/10.1007/11813040_20},
+ doi = {10.1007/11813040_20},
+ acmid = {2164849},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ keywords = {coupled transformation, data mappings, format evolution, generalized abstract datatypes, generic programming, program calculation, refinement calculus, strategic term rewriting, two-level transformation},
+}
+@article{cunha07,
+ author = {Cunha, Alcino and Visser, Joost},
+ title = {Strongly Typed Rewriting For Coupled Software Transformation},
+ journal = {Electron. Notes Theor. Comput. Sci.},
+ issue_date = {April, 2007},
+ volume = {174},
+ number = {1},
+ month = apr,
+ year = {2007},
+ issn = {1571-0661},
+ pages = {17--34},
+ numpages = {18},
+ url = {http://dx.doi.org/10.1016/j.entcs.2006.10.019},
+ doi = {10.1016/j.entcs.2006.10.019},
+ acmid = {1241123},
+ publisher = {Elsevier Science Publishers B. V.},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ keywords = {Program transformation, data refinement, generalized abstract datatypes, strategic programming, term rewriting},
+} 
+@ARTICLE{johann09,
+    author = {Patricia Johann and Janis Voigtländer},
+    title = {A family of syntactic logical relations for the semantics of Haskell-like languages},
+    journal = {INFORMATION AND COMPUTATION},
+    year = {2009}
+}
+@MISC{johann04,
+    author = {Patricia Johann and Janis Voigtländer},
+    title = {Free Theorems in the Presence of seq},
+    year = {2004}
+}
+@inproceedings{wadler89,
+ author = {Wadler, Philip},
+ title = {Theorems for free!},
+ booktitle = {Proceedings of the fourth international conference on Functional programming languages and computer architecture},
+ series = {FPCA '89},
+ year = {1989},
+ isbn = {0-89791-328-0},
+ location = {Imperial College, London, United Kingdom},
+ pages = {347--359},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/99370.99404},
+ doi = {10.1145/99370.99404},
+ acmid = {99404},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+@TECHREPORT{kucan97,
+    author = {Jakov Kucan},
+    title = {Metatheorems about Convertibility in Typed Lambda Calculi: Applications to CPS transform and "Free Theorems"},
+    institution = {},
+    year = {1997}
+}
+@article{crary07,
+ author = {Crary, Karl and Harper, Robert},
+ title = {Syntactic Logical Relations for Polymorphic and Recursive Types},
+ journal = {Electron. Notes Theor. Comput. Sci.},
+ issue_date = {April, 2007},
+ volume = {172},
+ month = apr,
+ year = {2007},
+ issn = {1571-0661},
+ pages = {259--299},
+ numpages = {41},
+ url = {http://dx.doi.org/10.1016/j.entcs.2007.02.010},
+ doi = {10.1016/j.entcs.2007.02.010},
+ acmid = {1230585},
+ publisher = {Elsevier Science Publishers B. V.},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ keywords = {Operational semantics, data abstraction, lambda calculus and related systems, logics of programs, polymorphism, type structure},
+}
+@INPROCEEDINGS{honsell99,
+    author = {Furio Honsell and Donald Sannella},
+    title = {Pre-logical Relations},
+    booktitle = {PROC. COMPUTER SCIENCE LOGIC, CSL'99},
+    year = {1999},
+    pages = {546--561},
+    publisher = {Springer}
+} 
+@article{gill09,
+	author = "Andy Gill and Graham Hutton",
+  title  = "{The Worker/Wrapper Transformation}",
+  journal = "Journal of Functional Programming",
+  publisher = "Cambridge University Press",
+  volume = 19,
+  number = 2,
+  pages = "227--251",
+  month = mar,
+  year = 2009
+}
+@phdthesis{norell07,
+  author  = {Ulf Norell},
+  title	  = {Towards a practical programming language based on dependent type
+	     theory},
+  school  = {Department of Computer Science and Engineering, Chalmers University of Technology},
+  year	  = 2007,
+  month	  = {September},
+  address = {SE-412 96 G\"{o}teborg, Sweden}
+}
+
+@misc{program-transformation,
+title = {Program-Transformation.Org},
+howpublished = {\url{http://http://www.program-transformation.org/}}
+}
+@misc{poplmark,
+title = {The POPLMark Challenge},
+howpublished = {\url{http://www.seas.upenn.edu/~plclub/poplmark/}}
+}
+@misc{stratego,
+title = {Stratego/XT},
+howpublished = {\url{http://strategoxt.org/}}
+}
+ 
