Complete version of thesis.

--- a/thesis.bib
+++ b/thesis.bib
@@ -33,31 +33,71 @@
  publisher = {ACM},
  address = {New York, NY, USA},
 }
-@MISC{erwig07,
-    author = {Martin Erwig and Deling Ren},
-    title = { An update calculus for expressing type-safe program updates},
-    year = {2007}
+@article{erwig07,
+  author    = {Martin Erwig and
+               Deling Ren},
+  title     = {An update calculus for expressing type-safe program updates},
+  journal   = {Sci. Comput. Program.},
+  volume    = {67},
+  number    = {2-3},
+  year      = {2007},
+  pages     = {199-222},
+  ee        = {http://dx.doi.org/10.1016/j.scico.2007.01.003},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
 }
-@TECHREPORT{heeren02,
-    author = {Bastiaan Heeren  and Jurriaan Hage and Doaitse Swierstra},
-    title = {Generalizing Hindley-Milner Type Inference Algorithms},
-    institution = {},
+@techreport{heeren02,
+    address = {University Utrecht, Netherlands},
+    author = {Heeren, Bastiaan and Hage, Jurriaan and Swierstra, Doaitse},
+    citeulike-article-id = {271085},
+    citeulike-linkout-0 = {http://archive.cs.uu.nl/pub/RUU/CS/techreps/CS-2002/2002-031.pdf},
+    institution = {Institute of Information and Computing Science},
+    keywords = {gradu, type-errors, type-inference},
+    month = jul,
+    posted-at = {2005-08-01 21:45:40},
+    priority = {2},
+    title = {{Generalizing Hindley-Milner Type Inference Algorithms}},
+    url = {http://archive.cs.uu.nl/pub/RUU/CS/techreps/CS-2002/2002-031.pdf},
     year = {2002}
-} 
-@article{keller10,
-    author = {Chantal Keller and Thorsten Altenkirch},
-    title = {Normalization by hereditary substitutions},
-    year = {2010},
-} 
-@thesis{keuchel11,
-    author = {Steven Keuchel},
-    title = {Generic Programming with binders and scope},
-    year = {2011},
 }
+@inproceedings{keller10,
+  author = {Keller, Chantal and Altenkirch, Thorsten},
+  title = {Hereditary substitutions for simple types, formalized},
+  booktitle = {Proceedings of the third ACM SIGPLAN workshop on Mathematically structured functional programming},
+  series = {MSFP '10},
+  year = {2010},
+  isbn = {978-1-4503-0255-5},
+  location = {Baltimore, Maryland, USA},
+  pages = {3--10},
+  numpages = {8},
+  url = {http://doi.acm.org/10.1145/1863597.1863601},
+  doi = {10.1145/1863597.1863601},
+  acmid = {1863601},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {decidability of {\$\beta\$}\&\#951;-equality, hereditary substitutions, normalizer, type theory},
+} 
+@inproceedings{keuchel11,
+ author = {Keuchel, Steven and Jeuring, Johan T.},
+ title = {Generic conversions of abstract syntax representations},
+ booktitle = {Proceedings of the 8th ACM SIGPLAN workshop on Generic programming},
+ series = {WGP '12},
+ year = {2012},
+ isbn = {978-1-4503-1576-0},
+ location = {Copenhagen, Denmark},
+ pages = {57--68},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2364394.2364403},
+ doi = {10.1145/2364394.2364403},
+ acmid = {2364403},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {abstract syntax, datatype-generic programming, fixed points},
+} 
+
 @INPROCEEDINGS{coutts07,
     author = {Duncan Coutts and Roman Leshchinskiy and Don Stewart},
     title = {Stream Fusion. From Lists to Streams to Nothing at All},
-    booktitle = {ICFP’07},
+    booktitle = {ICFP},
     year = {2007},
     publisher = {}
 }
@@ -87,15 +127,21 @@
   year      = {2011},
   pages     = {431-444}
 }
-@MISC{schurmann08,
-    author = {Carsten Schürmann and Jeffrey Sarnat},
-    title = {Structural Logical Relations ∗},
-    year = {2008}
+@inproceedings{schurmann08,
+  author    = {Carsten Sch{\"u}rmann and
+               Jeffrey Sarnat},
+  title     = {Structural Logical Relations},
+  booktitle = {LICS},
+  year      = {2008},
+  pages     = {69-80},
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/LICS.2008.44},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
 }
-@thesis{hinze00,
-  author = {Ralph Hinze},
-  title = {Generic Programs and Proofs},
-  year = 2000
+@phdthesis{hinze00,
+  title = "Generic Programs and Proofs",
+  author = "Hinze, Ralf",
+  year = "2000",
+  school = "Bonn University",
 }
 @inproceedings{reynolds83,
     author = {Reynolds, John C.},
@@ -144,17 +190,39 @@
  address = {Amsterdam, The Netherlands, The Netherlands},
  keywords = {Program transformation, data refinement, generalized abstract datatypes, strategic programming, term rewriting},
 } 
-@ARTICLE{johann09,
-    author = {Patricia Johann and Janis Voigtländer},
-    title = {A family of syntactic logical relations for the semantics of Haskell-like languages},
-    journal = {INFORMATION AND COMPUTATION},
-    year = {2009}
+@article{johann09,
+  author    = {Patricia Johann and
+               Janis Voigtl{\"a}nder},
+  title     = {A family of syntactic logical relations for the semantics
+               of Haskell-like languages},
+  journal   = {Inf. Comput.},
+  volume    = {207},
+  number    = {2},
+  year      = {2009},
+  pages     = {341-368},
+  ee        = {http://dx.doi.org/10.1016/j.ic.2007.11.009},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
 }
-@MISC{johann04,
-    author = {Patricia Johann and Janis Voigtländer},
-    title = {Free Theorems in the Presence of seq},
-    year = {2004}
-}
+@article{johann04,
+ author = {Johann, Patricia and Voigtl\"{a}nder, Janis},
+ title = {Free theorems in the presence of seq},
+ journal = {SIGPLAN Not.},
+ issue_date = {January 2004},
+ volume = {39},
+ number = {1},
+ month = jan,
+ year = {2004},
+ issn = {0362-1340},
+ pages = {99--110},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/982962.964010},
+ doi = {10.1145/982962.964010},
+ acmid = {964010},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Haskell, controlling strict evaluation, correctness proofs, denotational semantics, logical relations, parametricity, program transformations, short cut fusion, theorems for free},
+} 
+
 @inproceedings{wadler89,
  author = {Wadler, Philip},
  title = {Theorems for free!},
@@ -195,13 +263,19 @@
  address = {Amsterdam, The Netherlands, The Netherlands},
  keywords = {Operational semantics, data abstraction, lambda calculus and related systems, logics of programs, polymorphism, type structure},
 }
-@INPROCEEDINGS{honsell99,
-    author = {Furio Honsell and Donald Sannella},
-    title = {Pre-logical Relations},
-    booktitle = {PROC. COMPUTER SCIENCE LOGIC, CSL'99},
-    year = {1999},
-    pages = {546--561},
-    publisher = {Springer}
+@inproceedings{honsell99,
+ author = {Honsell, Furio and Sannella, Donald},
+ title = {Pre-logical Relations},
+ booktitle = {Proceedings of the 13th International Workshop and 8th Annual Conference of the EACSL on Computer Science Logic},
+ series = {CSL '99},
+ year = {1999},
+ isbn = {3-540-66536-6},
+ pages = {546--561},
+ numpages = {16},
+ url = {http://dl.acm.org/citation.cfm?id=647849.737068},
+ acmid = {737068},
+ publisher = {Springer-Verlag},
+ address = {London, UK, UK},
 } 
 @article{gill09,
 	author = "Andy Gill and Graham Hutton",
@@ -232,8 +306,44 @@ howpublished = {\url{http://http://www.program-transformation.org/}}
 title = {The POPLMark Challenge},
 howpublished = {\url{http://www.seas.upenn.edu/~plclub/poplmark/}}
 }
+@misc{source,
+title = {Source Code},
+howpublished = {\url{https://github.com/craffit/thesis}}
+}
+
+@INPROCEEDINGS{visser98,
+    author = {Eelco Visser and Zine-el-abidine Benaissa},
+    title = {A Core Language for Rewriting},
+    booktitle = {Electronic Notes in Theoretical Computer Science},
+    year = {1998},
+    pages = {1--4},
+    publisher = {Elsevier}
+}
 @misc{stratego,
 title = {Stratego/XT},
 howpublished = {\url{http://strategoxt.org/}}
 }
- 
+@inproceedings{backhouse02,
+ author = {Backhouse, Kevin and Backhouse, Roland},
+ title = {Logical Relations and Galois Connections},
+ booktitle = {Proceedings of the 6th International Conference on Mathematics of Program Construction},
+ series = {MPC '02},
+ year = {2002},
+ isbn = {3-540-43857-2},
+ pages = {23--39},
+ numpages = {17},
+ url = {http://dl.acm.org/citation.cfm?id=648086.747310},
+ acmid = {747310},
+ publisher = {Springer-Verlag},
+ address = {London, UK, UK},
+} 
+@inproceedings{swierstra12,
+  author    = {Wouter Swierstra},
+  title     = {From Mathematics to Abstract Machine: A formal derivation
+               of an executable Krivine machine},
+  booktitle = {MSFP},
+  year      = {2012},
+  pages     = {163-177},
+  ee        = {http://dx.doi.org/10.4204/EPTCS.76.10},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+} 
